# generic-cpp-toolkit

./: CMakeLists.txt  LICENSE  README.md
src/: args_storage.hpp  function_wrappers.hpp  macros.hpp  priority_event_queue.hpp  priority_event_queue_builder.hpp  worker.cpp  worker.hpp
tests/: args_storage_test.cpp  function_wrappers_test.cpp  priority_event_queue_test.cpp  thread_test.cpp
